# Mercury

./: :w  Cargo.toml  README.md  err.txt  mod.rs
src/: lib.rs  main.rs  node.rs  sync.rs
src/core/: mod.rs
src/core/async_impl/: async_batch_node.rs  async_flow.rs  async_node.rs  async_parallel_batch_node.rs  mod.rs
src/core/sync_impl/: batch_flow.rs  batch_node.rs  flow.rs  node.rs
src/llm/: error.rs  mod.rs  ollama.rs
src/sync/: batch_flow.rs  batch_node.rs  flow.rs  mod.rs  node.rs
