[package]
name = "orichalcum"
version = "0.1.0"
edition = "2024"
description = "My agent orchestration framework"
license = "MIT"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
json = "0.12.4"
log = "0.4.28"
reqwest = "0.12.23"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
